module(name = "roo_quantity", version = "1.1.7")

bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")

bazel_dep(name = "roo_flags", version = "1.2.1")
bazel_dep(name = "roo_logging", version = "1.5.3")
bazel_dep(name = "roo_time", version = "1.4.1")
